	  configuration (not yet verified) (2013-12-29).
	* Moved configs/stm3240g-eval/src/up_cxxinitialize.c to
	  apps/platform/stm3240g-eval/up_cxxinitialize.c:  Now it is available
	  in user-space in the kernel mode build (2013-12-29).
	* graphics/nxbe, nxsu, libnx/nxmu, and nxtk:  Need to be consistent with
	  which allocator is used in the different configurations.  Always uses
	  the user-space allocator because that one is required in certain
	  configurations (2013-12-30).
	* include/nuttx/kthread.h:  Move kernel thread definitions out of
	  os_internal.h so that the rest of the OS can start kernel threads as
	  well (2013-12-30).
	* configs/sim/mount/defconfig:  Converted to use kconfig-frontends
	  tools (2013-21-31).
	* configs/z16f2800100zcog/nsh:  Add a Z16F NSH configuration.  Does not
	  yet work (2014-1-1).
	* arch/arm/src/stm32/stm32_serial.c: Single-wire UART support from
	  Thomas Grubler (2014-1-2).
	* tools/configure.c and mkdeps.c:  Fixes for Windows build issues
	  from Max Holtzberg (2014-1-4).
	* configs/olimex-stm32-p107/nsh/Make.defs:  Add native Windoes build
	  support for the Olimex STM32 P107.  From Max Holtzberg (2014-1-4).
	* Makefile.win:  Changes for native Windows build: fix creation of
	  a .version file if one does not exist.  Make sure that the APPDIR
	  environment variable is set before configuring.  From Max Holtzberg
	  (2014-1-4).
	* configs/viewtool-stm32f107/src/stm32_ssd1289.c:  Add support for
	  Viewtool SSD1289-based LCD (untested on initial checkin)  (2013-1-5).
	* arch/arm/include/syscall.h and armv7-a/syscall.h:  Add the syscall.h
	  header file needed for the Cortex-A architecture (2014-1-5).
	* arch/arm/src/a1x/a1x_serial.c:  Remove bad flow control logic.  Add
	  missing interrupt handling logic for UART4-7 (2014-1-6).
	* nuttx/tools/mkconfig.c: Cast size to unsigned in calculation of
	  CONFIG_RAM_END to avoid complains about integer overflow (2013-1-6).